--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,15 @@ body {
   }
   
   table {
+    border: 1px solid black;
+    width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
-    width: 100%;
-    border: 1px solid rgb(0, 0, 0);
+   
+    
   }
   
   th, td {
     text-align: left;
-    padding: 16px;
+    padding: 8px;
   }
